--- a/_sources/b_coding/Fundamentals of Computer Science/7_Graph_Algorithms.ipynb
+++ b/_sources/b_coding/Fundamentals of Computer Science/7_Graph_Algorithms.ipynb
@@ -9,6 +9,84 @@
     "``` {index} Graph Algorithms\n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Breadth-first search (BFS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Depth-first search (DFS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Shortest path\n",
+    "\n",
+    "### Dijkstra's algorithm\n",
+    "\n",
+    "### Bellman-Ford algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Floyd cycle detection algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Minimum spanning tree (MST)\n",
+    "\n",
+    "### Prim's algorithm\n",
+    "\n",
+    "### Kruskal's algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph colouring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Maximum flow "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
