--- a/_sources/b_coding/Fundamentals of Computer Science/7_Graph_Algorithms.ipynb
+++ b/_sources/b_coding/Fundamentals of Computer Science/7_Graph_Algorithms.ipynb
@@ -16,11 +16,11 @@
    "source": [
     "## Graph\n",
     "\n",
-    "In broad tems. A graph (V,E) is an abstract structure consisting of nodes (*vertices*) and edges connecting some of them. Graphs can be directed or undirected which means that their edges can be traversed in one or both directions. Graphs can be unweighted or not, their edges can have assigned weights. There are several ways of representing graphs in computers, two of which are:\n",
+    "In broad terms. A graph \\\\((V,E)\\\\) is an abstract structure consisting of nodes (*vertices*) and edges connecting some of them. Graphs can be directed or undirected which means that their edges can be traversed in one or both directions. Graphs can be unweighted or not, their edges can have assigned weights. There are several ways of representing graphs in computers, two of which are:\n",
     "\n",
     "* Adjecency matrix \\\\(A\\\\): Which are matrices consisting of \\\\(1\\\\) and \\\\(0\\\\). A \\\\(1\\\\) at a coordinates \\\\((i,j)\\\\) means that there is an edge from node \\\\(i\\\\) to node \\\\(j\\\\). For undirected graphs \\\\(A[i,j]\\\\) = \\\\(A[j,i]\\\\). Adjacency matricex are a compact way of representing *dense* graphs where the number of edges is close to \\\\(|V|^2\\\\). \n",
     "\n",
-    "* Adjacency list \\\\(L\\\\): which is a 2D array where an entry \\\\(L[i]\\\\) is a list with the ids of nodes to which \\\\(i\\\\) is connected to. It is a space efficient representation for *sparse* graphs where not many nodes are connected.\n",
+    "* Adjacency list \\\\(L\\\\): which is a 2D array where an entry \\\\(L[i]\\\\) is a list with the ids of nodes to which \\\\(i\\\\) is connected to. It is a space-efficient representation for *sparse* graphs where not many nodes are connected.\n",
     "\n",
     "```{figure} algo_images/Graphs.png\n",
     ":width: 60%\n",
@@ -40,21 +40,26 @@
     "\n",
     "### Breadth-first search (BFS)\n",
     "\n",
-    "The name of this graph traversal stems from they way it visits the nodes. It starts at some arbitraliy chosen node and then visits all the nodes that are distance 1 away from it, then distance 2 etc. BFS will not visit a node that is distance \\\\(d+1\\\\) until it visits all nodes at a distance \\\\(d\\\\). When two nodes are equal distance from the first node, the choice is also arbitrary (we wil go for the numerical order).\n",
+    "The name of this graph traversal stems from the way it visits the nodes. It starts at some arbitrarily chosen node and then visits all the nodes that are distance 1 away from it, then distance 2 etc. BFS will not visit a node that is distance \\\\(d+1\\\\) until it visits all nodes at a distance \\\\(d\\\\). When two nodes are equal distance from the first node, the choice is also arbitrary (we will go for the numerical order).\n",
     "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/4/46/Animated_BFS.gif\" width=\"40%\">\n",
     "\n",
     "Source: [Wikimedia Commons](https://upload.wikimedia.org/wikipedia/commons/4/46/Animated_BFS.gif)\n",
     "\n",
-    "We will divide the nodes of the graph into three kinds: white, grey and black. White are unvisited, grey are being considered and black are alredy visited. Grey nodes are a queue, first in last out.\n",
+    "We will divide the nodes of the graph into three kinds: white, grey and black. White nodes are unvisited, grey are being considered and black are already visited. Grey nodes are a queue, first in last out.\n",
     "In words, the algorithm will work as follows:\n",
     "\n",
     "1) Add all nodes to the white list.\n",
+    "\n",
     "2) Choose an arbitrary white node, put it in the grey queue.\n",
+    "\n",
     "3) Consider all nodes connected to the node, that are white, add them to the grey queue one by one.\n",
+    "\n",
     "4) Move the node considered to the black list.\n",
+    "\n",
     "5) If the grey queue is not empty, take another grey node and come back to the 3rd step.\n",
-    "6) If white list is not empty, come back to the 2nd step, otherwise terminate.\n",
+    "\n",
+    "6) If the white list is not empty, come back to the 2nd step, otherwise terminate.\n",
     "\n",
     "The following implementations print the node id as they are added to the black list."
    ]
@@ -180,7 +185,7 @@
     "\n",
     "1) Finding a MST (see below) in an unweighted graph.\n",
     "\n",
-    "2) Finind a minimum path in an unweighted graph (initial node has to be at the end of the searched path).\n",
+    "2) Fining a minimum path in an unweighted graph (initial node has to be at the end of the searched path).\n",
     "\n",
     "3) Detecting cycles in graphs (by encountering a visited node).\n",
     "\n",
@@ -193,7 +198,7 @@
    "source": [
     "## Depth-first search (DFS)\n",
     "\n",
-    "In DFS we will allways go *deeper* into the graph whenever possible. We start at an arbitrary node and then go to the first possible via an edge. This is repeated utill we reach a node which has only edges to alredy visited nodes (or no edges). We then trace back to the previous node in this procedure. We continue untill all nodes are visited.\n",
+    "In DFS we will always go *deeper* into the graph whenever possible. We start at an arbitrary node and then go to the first possible via an edge. This is repeated until we reach a node which has only edges to already visited nodes (or no edges). We then trace back to the previous node in this procedure. We continue until all nodes are visited.\n",
     "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/7/7f/Depth-First-Search.gif\" width=\"40%\">\n",
     "\n",
@@ -282,24 +287,25 @@
    "source": [
     "## Minimum spanning tree (MST)\n",
     "\n",
-    "A *spannign tree* of a graph \\\\(G\\\\) is a subgraph of \\\\(G\\\\) that includes all its nodes. The concept is meaingful for connected graphs only (if the graph is not connected we are considering its *spannign forest*). The problem of MST is considered for weighted graphs \\\\((V,E\\\\) with \\\\(w\\\\) - a function that returs the weight of an edge in \\\\(E\\\\). A *minimum spanning tree* is one in which the sum of weights of the edges is minimal. Surprisingly, the problem can be solved by using an *greedy* approach. Here are two possible approaches:\n",
+    "A *spanning tree* of a graph \\\\(G\\\\) is a subgraph of \\\\(G\\\\) that includes all its nodes. The concept is meaningful for connected graphs only (if the graph is not connected we are considering its *spanning forest*). The problem of MST is considered for weighted graphs \\\\((V,E\\\\) with \\\\(w\\\\) - a function that returns the weight of an edge in \\\\(E\\\\). A *minimum spanning tree* is one in which the sum of weights of the edges is minimal. Surprisingly, the problem can be solved by using a *greedy* approach. Here are two possible approaches:\n",
     "\n",
     "### Kruskal's algorithm\n",
     "\n",
-    "The Kruskal's approach is based on the following procedure:\n",
+    "Kruskal's approach is based on the following procedure:\n",
     "\n",
     "1) Create a single element set for every node.\n",
+    "\n",
     "2) Sort the edges in \\\\(E\\\\) by weight in non-decreasing order, put them in a priority queue.\n",
+    "\n",
     "3) Take the edge of least weight and if it connects elements from different sets, use it. Make the connected sets one (by setting the same group leader). \n",
     "\n",
     "`find(u)` method will find the leader of a group. `u,v` are in the same group if `find(u) == find(v)`.\n",
-    "`union(u,v)` will join two sets. The leader will be the leader of the set of more elements, otherwise arbitrary.\n",
-    "\n"
+    "`union(u,v)` will join two sets. The leader will be the leader of the set of more elements, otherwise arbitrary."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -365,13 +371,15 @@
    "source": [
     "### Prim's algorithm\n",
     "\n",
-    "Prim's algorithm is similair to Kruskal's but at each step there is only one tree that grows. The idea is as follows:\n",
+    "Prim's algorithm is similar to Kruskal's but at each step, there is only one tree that grows. The idea is as follows:\n",
     "\n",
     "1) Start at an arbitrary node in \\\\(G\\\\)\n",
+    "\n",
     "2) Take the minimum edge incident on one of the already considered nodes (that connects it to the node not previously seen). This way the tree expands.\n",
+    "\n",
     "3) When all nodes are in the tree, terminate.\n",
     "\n",
-    "Of course, the 2nd step may be a bit tricky to implement efficiently. We will use a *priority queue* from the `heapq` interface to efficiently choose the next edge to add. We also need to upgrade our adjacency list representation of the graph. Now it is a dictionary which maps to a dictionary with incident nodes as keys and their correncponding edge weights as values. So `graph[from][to]` gives the desired edge if it exists. It assumes that there is at most one edge between any two nodes (undirected graph), if this is violated, we would always choose the edge of minimum weight."
+    "Of course, the 2nd step may be a bit tricky to implement efficiently. We will use a *priority queue* from the `heapq` interface to efficiently choose the next edge to add. We also need to upgrade our adjacency list representation of the graph. Now it is a dictionary which maps to a dictionary with incident nodes as keys and their corresponding edge weights as values. So `graph[from][to]` gives the desired edge if it exists. It assumes that there is at most one edge between any two nodes (undirected graph), if this is violated, we would always choose the edge of minimum weight."
    ]
   },
   {
@@ -445,7 +453,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "source": [
     "## Shortest path\n",
     "\n",
@@ -456,21 +468,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
    "source": [
     "## Floyd cycle detection algorithm"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
    "source": [
     "## Graph colouring"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
    "source": [
     "## Maximum flow "
    ]
@@ -480,12 +504,15 @@
    "metadata": {},
    "source": [
     "## References\n",
-    "https://www.geeksforgeeks.org/applications-of-breadth-first-traversal/?ref=rp\n",
-    "https://bradfieldcs.com/algos/graphs/prims-spanning-tree-algorithm/"
+    "* Cormen, Leiserson, Rivest, Stein, \"Introduction to Algorithms\", Third Edition, MIT Press, 2009\n",
+    "* GeeksforGeeks, [Applications of Breadth First Traversal](https://www.geeksforgeeks.org/applications-of-breadth-first-traversal/?ref=rp)\n",
+    "* Vijini Mallawaarachchi, Medium, Towards Data Science, [10 Graph Algorithms Visually Explained](https://towardsdatascience.com/10-graph-algorithms-visually-explained-e57faa1336f3), 2020\n",
+    "* Brad Filed, Practical Algorithms and Data Structures, [Prim's Spanning Tree Algorithm](https://bradfieldcs.com/algos/graphs/prims-spanning-tree-algorithm/), 2020"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
