--- a/notebooks/a_modules/tectonics_of_the_ocean/1_mapping_the_ocean_floor.ipynb
+++ b/notebooks/a_modules/tectonics_of_the_ocean/1_mapping_the_ocean_floor.ipynb
@@ -9,17 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "!pip install https://github.com/matplotlib/basemap/archive/master.zip\n",
-    "\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.basemap import Basemap"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -105,7 +100,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -135,63 +132,6 @@
     "plt.xlabel('Longitude (°)')\n",
     "plt.ylabel('Equivalent Kilometer (km)')\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: basemap in /Users/woodstock/Library/Python/3.9/lib/python/site-packages (1.3.3)\n",
-      "Requirement already satisfied: pyshp<2.2,>=1.2 in /Users/woodstock/Library/Python/3.9/lib/python/site-packages (from basemap) (2.1.3)\n",
-      "Requirement already satisfied: numpy<1.23,>=1.21 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from basemap) (1.21.2)\n",
-      "Requirement already satisfied: matplotlib<3.6,>=1.5 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from basemap) (3.5.1)\n",
-      "Requirement already satisfied: basemap-data<1.4,>=1.3.2 in /Users/woodstock/Library/Python/3.9/lib/python/site-packages (from basemap) (1.3.2)\n",
-      "Requirement already satisfied: pyproj<3.4.0,>=1.9.3 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from basemap) (3.2.1)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib<3.6,>=1.5->basemap) (0.11.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib<3.6,>=1.5->basemap) (8.4.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib<3.6,>=1.5->basemap) (21.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib<3.6,>=1.5->basemap) (2.8.2)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib<3.6,>=1.5->basemap) (4.28.4)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib<3.6,>=1.5->basemap) (1.3.2)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from matplotlib<3.6,>=1.5->basemap) (3.0.6)\n",
-      "Requirement already satisfied: certifi in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from pyproj<3.4.0,>=1.9.3->basemap) (2021.5.30)\n",
-      "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages (from python-dateutil>=2.7->matplotlib<3.6,>=1.5->basemap) (1.16.0)\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: basemap-data in /Users/woodstock/Library/Python/3.9/lib/python/site-packages (1.3.2)\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'mpl_toolkits.basemap'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-c016574f896f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pip install basemap-data'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmpl_toolkits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbasemap\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBasemap\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mpl_toolkits.basemap'"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install basemap\n",
-    "!pip install basemap-data\n",
-    "\n",
-    "from mpl_toolkits.basemap import Basemap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#https://jakevdp.github.io/PythonDataScienceHandbook/04.13-geographic-data-with-basemap.html"
    ]
   }
  ],
