--- a/notebooks/a_modules/tectonics_of_the_ocean/1_mapping_the_ocean_floor.ipynb
+++ b/notebooks/a_modules/tectonics_of_the_ocean/1_mapping_the_ocean_floor.ipynb
@@ -133,6 +133,49 @@
     "plt.ylabel('Equivalent Kilometer (km)')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Degree Annotation\n",
+    "One degree is equal to 60 minutes and equal to 3600 seconds:\n",
+    "$ 1° = 60' = 3600\" $\n",
+    "\n",
+    "One minute is equal to 1/60 degrees:\n",
+    "$1' = (1/60)° = 0.01666667°$\n",
+    "\n",
+    "One second is equal to 1/3600 degrees:\n",
+    "$1\" = (1/3600)° = 2.77778e-4° = 0.000277778°$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decimal_degree_covertion(degree, minute, second):\n",
+    "    decimal_degree = degree + minute/60 + second/3600\n",
+    "    return decimal_degree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53° 30' 36\" is equal to 53.51.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'53° 30\\' 36\" is equal to {decimal_degree_covertion(53, 30, 36)}.')"
+   ]
   }
  ],
  "metadata": {
