--- a/notebooks/a_modules/tectonics_of_the_ocean/1_mapping_the_ocean_floor.ipynb
+++ b/notebooks/a_modules/tectonics_of_the_ocean/1_mapping_the_ocean_floor.ipynb
@@ -118,7 +118,7 @@
     }
    ],
    "source": [
-    "# Plot to covert longitude degree to kilometer\n",
+    "# Plot to covert the distance of 1 degree at a certain longitude to kilometer\n",
     "\n",
     "x = np.arange(0, 90, 0.1)\n",
     "y = 111*np.cos(x*(np.pi)/180)\n",
@@ -135,10 +135,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The distance of 1 degree at a certain longitude to kilometer convertion\n",
+    "def longitude_km_convertion(longitude):\n",
+    "    longitude_km = 111*np.cos(longitude*(np.pi)/180)\n",
+    "    return longitude_km"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The distance of 1 degree at 80°N is equal to 19.27 km.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'The distance of 1 degree at 80°N is equal to {round(longitude_km_convertion(80),2)} km.')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Degree Annotation\n",
+    "## Degree Notation\n",
     "One degree is equal to 60 minutes and equal to 3600 seconds:\n",
     "$ 1° = 60' = 3600\" $\n",
     "\n",
@@ -155,6 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Degree notation to decimal degree convertion\n",
     "def decimal_degree_covertion(degree, minute, second):\n",
     "    decimal_degree = degree + minute/60 + second/3600\n",
     "    return decimal_degree"
@@ -162,19 +192,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "53° 30' 36\" is equal to 53.51.\n"
+      "53° 30' 36\" is equal to 53.51°.\n"
      ]
     }
    ],
    "source": [
-    "print(f'53° 30\\' 36\" is equal to {decimal_degree_covertion(53, 30, 36)}.')"
+    "print(f'53° 30\\' 36\" is equal to {decimal_degree_covertion(53, 30, 36)}°.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reference\n",
+    "2022 notes and practical from Lecture 1 of the module ESE 60028 Tectonics of the Ocean"
    ]
   }
  ],
