Changes to 1_complex_numbers

--- a/notebooks/a_modules/mathematical_methods_2/1_complex_numbers.ipynb
+++ b/notebooks/a_modules/mathematical_methods_2/1_complex_numbers.ipynb
@@ -8,10 +8,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import relevent modules\n",
+    "import numpy as np\n",
+    "import cmath\n",
+    "from math import pi\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Background On Complex Numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Argand Diagram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating an Argand Diagram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extracting the Modulus and Argument"
    ]
   },
   {
